--- a/css/style.css
+++ b/css/style.css
@@ -11,5 +11,32 @@
 }
 
 body {
-    background-image: url('..img//background.jpg');
+    background-image: url('../img/background.jpg');
+    background-size: cover;
+    /* background-position: -200px; */
 }
+
+textarea:focus, input:focus {
+    outline: none;
+}
+
+a{
+    font-size: .8rem;
+}
+a:hover {
+    color: #08558b;
+}
+
+/* container login*/
+
+#login-container {
+    background-color: #fff;
+    width: 400px;
+    margin: auto;
+    padding: 20px 30px;
+    margin-top: 10vh;
+    border-radius: 10px;
+    text-align: center;
+
+}
+/* formulario */
