--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,17 @@ body {
     /* background-position: -200px; */
 }
 
-textarea:focus, input:focus {
+textarea:focus,
+input:focus {
     outline: none;
 }
 
-a{
+a,
+label {
     font-size: .8rem;
+
 }
+
 a:hover {
     color: #08558b;
 }
@@ -39,4 +43,56 @@ a:hover {
     text-align: center;
 
 }
+
 /* formulario */
+
+form {
+    margin-top: 30px;
+    margin-bottom: 40px;
+
+}
+
+label,
+input {
+    display: block;
+    width: 100%;
+    text-align: left;
+}
+
+label {
+    font-weight: bold;
+}
+
+input {
+    border-bottom: 2px solid #323232;
+    padding: 10px;
+    font-size: 1rem;
+    margin-bottom: 20px;
+}
+
+input:focus {
+    border-bottom: 2px solid #08558b;
+}
+
+#forgot-pass {
+    text-align: right;
+    display: block;
+}
+
+input[type="submit"] {
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bold;
+    border: none;
+    height: 40px;
+    border-radius: 20px;
+    margin-top: 30px;
+    color: #FFF;
+    background-color: #08558b;
+    cursor: pointer;
+}
+
+input[type="submit"]:hover{
+    background-color: #1b223c;
+    transition: .5s;
+}
