--- a/css/style.css
+++ b/css/style.css
@@ -96,3 +96,29 @@ input[type="submit"]:hover{
     background-color: #1b223c;
     transition: .5s;
 }
+
+/* redes sociais */
+
+#social-container, #social-container p {
+    margin-bottom: 20px;
+}
+
+#social-container i {
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    line-height: 40px;
+    color: #fff;
+    margin: 0 5px;
+    cursor: pointer;
+}
+
+.fa-facebook-f {
+    background-color: #3b5998;
+}
+
+.fa-linkedin {
+    background-color: #0077b5;
+}
+
+/* registrar */
